--- a/about.html
+++ b/about.html
@@ -91,8 +91,8 @@
 
 <h4><b>Our Goal</b></h4>
 <p align="justify">To Fulfill The Great Comission That Is “...Go Into All The World And Preach The Gospel To All The Creation.” –Mark 16:15</p>
-<h4><b>Why Amp Media?</b></h4>
-<p align="justify">Amp Media Is The Fastest And Best Way To Reach Millions From One Place. “And This Gospel Of The Kingdom Will Be Preached In The Whole World As A Testimony To All Nations, And Then The End Will Come.” –Matthew 24:14</p>
+<h4><b>Why AMP Media?</b></h4>
+<p align="justify">AMP Media Is The Fastest And Best Way To Reach Millions From One Place. “And This Gospel Of The Kingdom Will Be Preached In The Whole World As A Testimony To All Nations, And Then The End Will Come.” –Matthew 24:14</p>
 		</div>
 	</div>
 	<!-- end contact -->
