--- a/anugrah-eventz.html
+++ b/anugrah-eventz.html
@@ -87,7 +87,7 @@
 			
 			<p align="justify">
 A House Of Event Management.<br><br>
-<b>What We Do?</b><br><br>
+<b>What We Do?</b><br>
 			
 <ul>
     <li>Crusades</li>
