--- a/donate.html
+++ b/donate.html
@@ -85,7 +85,7 @@
 			<h3>Donate</h3>
 		</div>	
 			
-			<img src="img/donate.jpg"width="100%">
+			<img src="img/d.jpg"width="100%">
 			
 		</div>
 	</div>
