--- a/house-Of-prayer.html
+++ b/house-Of-prayer.html
@@ -88,17 +88,17 @@
 <b>Our Prayer Timings Are As Follows-</b><br><br>
 	
 <ul>
-    <li>Every Monday To Saturday<br>
+    <li><b>Every Monday To Saturday</b><br>
 10:00 Am-5:00 Pm- Volunteers Prayer Time<br>
 12:30pm-1:30pm- Special Devotion Time<br>
 At Bhalubasa Office Prayer Room, Jamshedpur.</li><br>
-    <li>Every Thursday<br>
+    <li><b>Every Thursday</b><br>
 Blessing Prayer From 6:00pm At House Of Prayer, <br>
 Zone No.10, Birsanagar Jamshedpur.</li><br>
-    <li>Every Month 2nd Friday<br>
+    <li><b>Every Month 2nd Friday</b><br>
 Whole Night Prayer From 10:00pm-4:00am <br>
 At Zone No.10, Birsanagar Jamshedpur.</li><br>
-    <li>Every Month 1st Saturday<br>
+    <li><b>Every Month 1st Saturday</b><br>
 Special Fasting Prayer From 9:00am-12:00pm <br>
 At Ph Church, Baridih, Jamshedpur.</li>
     
