--- a/donate.html
+++ b/donate.html
@@ -78,20 +78,18 @@
 
 	
 	
-	<!-- page 404 -->
+	<!-- contact-->
 	<div class="contact app-pages app-section">
 		<div class="container">
 			<div class="pages-title">
-			<h3>Donate</h3>
-		</div>	
-			
-			<img src="img/d.jpg"width="100%">
-			
+				<h3>Join As A Volunteer</h3>
+			</div>
+			<img src="img/donate.jpg"width="100%">
 		</div>
 	</div>
-	<!-- end page 404 -->
+	<!-- end contact -->
 	
-<!-- footer -->
+	<!-- footer -->
 	<footer>
 		<div class="container">
 			<h6>Find & follow us</h6>
@@ -125,4 +123,4 @@
 	<script src="js/custom.js"></script>
 
 </body>
-</html> 
+</html>
