--- a/donate.html
+++ b/donate.html
@@ -82,7 +82,7 @@
 	<div class="contact app-pages app-section">
 		<div class="container">
 			<div class="pages-title">
-				<h3>Join As A Volunteer</h3>
+				<h3>Donate</h3>
 			</div>
 			<img src="img/donate.jpg"width="100%">
 		</div>
