--- a/donate.html
+++ b/donate.html
@@ -84,7 +84,7 @@
 			<div class="pages-title">
 				<h3>Donate</h3>
 			</div>
-			<img src="img/donate.jpg"width="100%">
+			<img src="img/help.jpg"width="100%">
 		</div>
 	</div>
 	<!-- end contact -->
